[BUG #7822] Firefox displays qx.Mobile Menu too large * Fix for Branch_3_0_x

--- a/framework/source/resource/qx/mobile/css/ios.css
+++ b/framework/source/resource/qx/mobile/css/ios.css
@@ -844,7 +844,7 @@ input, select, .text-area {
   -webkit-border-radius: 0.6em;
   -moz-border-radius: 0.6em;
   border-radius: 0.6em;
-  height: 100%;
+  height: 15px;
   pointer-events: none;
   position: relative; }
 
